--- a/public/play.html
+++ b/public/play.html
@@ -174,7 +174,7 @@
       window.addEventListener("DOMContentLoaded", () => {
         const qr = new QRious({
           element: document.getElementById("qr-canvas"),
-          value: window.location.href,
+          value: "https://jokodin.github.io/Karaoke",
           size: 100,
         });
       });
