Update QR code to point to Railway URL

--- a/public/play.html
+++ b/public/play.html
@@ -186,7 +186,7 @@
       window.addEventListener("DOMContentLoaded", () => {
         const qr = new QRious({
           element: document.getElementById("qr-canvas"),
-          value: window.location.origin,
+          value: "https://web-production-9ab8c.up.railway.app",
           size: 100,
         });
       });
