--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,10 @@
       }
       .error {
         color: red;
-        margin-top: 10px;
+        margin-top: 20px;
         white-space: pre-line;
+        text-align: center;
+        width: 100%;
       }
     </style>
   </head>
@@ -81,7 +83,7 @@
         error.style.display = "block";
         setTimeout(() => {
           error.style.display = "none";
-        }, 3000);
+        }, 8000);
       }
     </script>
   </body>
